--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:
 description: > # this means to ignore newlines until "baseurl:"
   Full-Stack Web Development
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://cs52.me" # the base hostname & protocol for your site
+url: "https://dartmouth-cs52-19s.github.io/" # the base hostname & protocol for your site
 twitter_username: timofei7
 github_username:  timofei7
 
@@ -28,10 +28,3 @@ exclude: ["slide_template.md"]
 
 plugins:
   - jemoji
-
-algolia:
-  application_id: D3R6EYXRKJ
-  index_name:     jekyll
-  # Actually index the index.html/index.md pages
-  files_to_exclude: ["**/index_slides.md", "slide_template.md"]
-  search_only_api_key: 41d80d2fb4d78a95b5ee5bf78cfe1080
